# sickchill

./: .appveyor.yml  .babelrc  .bettercodehub.yml  .bowerrc  .checkignore  .codecov.yml  .coderabbit.yaml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .hound.yml  .houndignore  .jscsrc  .jshintrc  .lgtm.yml  .mypy.ini  .pre-commit-config.yaml  .pullapprove.yml  .snyk  .travis.yml  CHANGES.md  CONTRIBUTORS.md  COPYING.txt  Changes  Dockerfile  Dockerfile.with_pip  Gruntfile.js  HACKS.txt  HideScript.vbs  LICENSE.md  MANIFEST.in  Makefile  README.md  SECURITY.md  SickBeard.py  SickChill.py  TODO.txt  apparmor_profile  (+32 more)
.build/: Gruntfile.js  bower.json  package.json
.build/patches/: subliminal.patch
.build/test/: tests.js
.github/: .bettercodehub.yml  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  NOTES.md  PULL_REQUEST_TEMPLATE.md  babel-mapping.cfg  dependabot.yml  issue_label_bot.yaml  stale.yml
.github/workflows/: calver.yml  check_release.yml  codeql.yml  delete_old.yml  dependabot-auto-merge.yml  docker.yml  greetings.yml  microsoft.yml  pythonpackage.yml  release.yaml  release.yml  release_info.yml  stale.yml  upgrade_dependencies.yml
adba/: __init__.py  aniDBAbstracter.py  aniDBcommands.py  aniDBerrors.py  aniDBfileInfo.py  aniDBlink.py  aniDBmaper.py  aniDBresponses.py  aniDBtvDBmaper.py
autoProcessTV/: autoProcessTV.py  hellaToSickBeard.py  mediaToSickbeard.py  sabToSickBeard.py  setup.py
cherrypy/: __init__.py  _cpdispatch.py  _cplogging.py  _cpserver.py  _cptools.py  _cpwsgi.py  _cpwsgi_server.py
cherrypy/lib/: __init__.py  cptools.py  encoding.py  httpauth.py  httputil.py  sessions.py  static.py
cherrypy/test/: _test_decorators.py  _test_states_demo.py  benchmark.py  helper.py  logtest.py  modfastcgi.py  modfcgid.py  modpy.py  sessiondemo.py  test_auth_basic.py  test_auth_digest.py  test_bus.py  test_caching.py  test_compat.py  test_config.py  test_config_server.py  test_conn.py  test_core.py  test_dynamicobjectmapping.py  test_encoding.py  test_etags.py  test_http.py  test_httpauth.py  test_json.py  test_logging.py  test_mime.py  test_misc_tools.py  test_objectmapping.py  test_proxy.py  test_refleaks.py  test_request_obj.py  test_routes.py  test_session.py  test_sessionauthenticate.py  test_states.py  test_static.py  test_tools.py  test_tutorials.py  test_virtualhost.py  test_wsgi_ns.py  (+4 more)
cherrypy/tutorial/: README.txt  tut01_helloworld.py  tut02_expose_methods.py  tut03_get_and_post.py  tut04_complex_site.py  tut05_derived_objects.py  tut06_default_method.py  tut07_sessions.py  tut08_generators_and_yield.py  tut10_http_errors.py
cherrypy/wsgiserver/: wsgiserver2.py  wsgiserver3.py
contrib/: Dockerfile.rpi.bundle  debian-ubuntu-install.sh  readme.md
contrib/docker/: Dockerfile-slim-git  Dockerfile.pip  Dockerfile.rpi  Dockerfile.slim-pip  Dockerfile.wheels
contrib/images/: icon.xcf  logo.xcf  vector.xcf
contrib/runscripts/: init.debian  (+8 more)
debian/: changelog  control  rules  sickchill.links  sickchill.postinst  sickchill.service  sickchill.triggers
frontend/: app.py  configurations.py  utils.py
js/: ajaxNotifications.js  blackwhite.js  browser.js  core.js  globals.js  imageSelector.js  parsers.js  ratingTooltip.js  rootDirs.js  testRename.js
lib/: MultipartPostHandler.py  README.md  backports_abc.py  certgen.py  configobj.py  daemon.py  decorator.py  dogpile.cache-0.5.7-py2.7-nspkg.pth  feedparser.py  markdown2.py  pastebin.py  pkg_resources.py  profilehooks.py  putiopy.py  pymediainfo-2.0-py2.7.egg  pytz-2016.4-py2.7.egg  rarfile.py  six.py  sqliteshelf.py  tus.py
lib3/: putiopy.py  rarfile.py  slugify.py  trans.py
locale/: messages.pot  nl.po
patches/: feedparser.diff
requirements/: readme.md  requirements.txt  sort.py
runscripts/: init.debian  init.fedora  init.freebsd  init.gentoo  init.openbsd  init.solaris11  init.systemd  init.ubuntu  init.upstart
sickbeard/: __init__.py  autoPostProcesser.py  auto_postprocessor.py  blackandwhitelist.py  browser.py  bs4_parser.py  bug_tracker.py  classes.py  common.py  config.py  dailysearcher.py  db.py  encodingKludge.py  event_queue.py  exceptions.py  failedProcessor.py  failed_history.py  filters.py  generic_queue.py  gh_api.py  helpers.py  history.py  image_cache.py  imdbPopular.py  imdbWatchlist.py  logger.py  maintenance.py  name_cache.py  naming.py  network_timezones.py  notifications_queue.py  numdict.py  nzbSplitter.py  nzbget.py  postProcessor.py  post_processing_queue.py  post_processor.py  processTV.py  properFinder.py  routes.py  (+31 more)
sickchill/: __init__.py  auto_postprocessor.py  blackandwhitelist.py  browser.py  bs4_parser.py  certgen.py  classes.py  common.py  config.py  dailysearcher.py  db.py  event_queue.py  failedProcessor.py  failed_history.py  generic_queue.py  helpers.py  history.py  image_cache.py  imdbPopular.py  init_helpers.py  logger.py  movies.py  name_cache.py  naming.py  network_timezones.py  numdict.py  nzbSplitter.py  nzbget.py  postProcessor.py  post_processing_queue.py  processTV.py  properFinder.py  rssfeeds.py  sab.py  sbdatetime.py  scene_exceptions.py  scene_numbering.py  scheduler.py  search.py  searchBacklog.py  (+19 more)
test/: testrunner.html
tests/: __init__.py  all_tests.py  api_v1_tests.py  browser_tests.py  common_tests.py  config_tests.py  conftest.py  db_row_type_problem.py  db_tests.py  dirty_setter_tests.py  encoding_tests.py  exceptions_helper_tests.py  feedparser_tests.py  filter_bad_releases_tests.py  helpers_tests.py  issue_submitter_tests.py  name_parser_tests.py  notifier_tests.py  numdict_tests.py  post_processor_queue_tests.py  pp_tests.py  prefer_words_tests.py  scene_helpers_tests.py  search_tests.py  snatch_tests.py  ssl_sni_tests.py  test_api_v1.py  test_browser.py  test_common.py  test_config.py  test_db.py  test_dirty_setter.py  test_feedparser.py  test_filter_bad_releases.py  test_helpers.py  test_issue_submitter.py  test_lib.py  test_name_parser.py  test_notifier.py  test_numdict.py  (+16 more)
tornado/: http1connection.py  iostream.py  routes.py  routing.py  simple_httpclient.py  util.py  web.py
trakt/: trakt.py
(+5625 files in other folders)
