[tool.poetry]
name = "sickchill"
version = "2022.10.8"
description = 'Automatic Video Library Manager for TV Shows'
license = "GPL-3.0-or-later"

authors = [
    "Dustyn Gibson <miigotu@gmail.com>",
    "BKSteve <stephen.rieger@gmail.com>",
    "pigsyn <nobody@github.com>",
    "kyuuk <nobody@github.com>"
]

maintainers = [
    "Dustyn Gibson <miigotu@gmail.com>"
]

readme = "README.md"

repository = "https://github.com/sickchill/sickchill"
homepage = "https://sickchill.github.io"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

packages = [
    { include = "sickchill" },
    { include = "SickChill.py" },
]

[tool.poetry.urls]
"Changelog" = "https://raw.githubusercontent.com/SickChill/sickchill.github.io/master/sickchill-news/CHANGES.md"
"Bug Tracker" = "https://github.com/sickchill/sickchill/issues"
"News" = "https://raw.githubusercontent.com/SickChill/sickchill.github.io/master/sickchill-news/news.md"
"Discord" = "https://discord.com/invite/U8WPBdf"
"Slack" = "https://sickchill.slack.com/"
"Telegram" = "https://t.me/sickchill"
"IRC" = "https://webchat.freenode.net/?channels=#sickchill"
"Donate"= "https://github.com/SickChill/SickChill/wiki/Donations"

[tool.poetry.scripts]
SickChill = "SickChill:main"
sickchill = "SickChill:main"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
coveralls = "^3.3.1"
mock = "^4.0.3"
Babel = "^2.9.0"
pytest-cov = "^3.0.0"
pytest-isort = "^3.0.0"
flake8-pytest-style = "^1.5.1"
flake8-commas = "^2.0.0"
flake8-quotes = "^3.3.0"
flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.6.0"
flake9 = "^3.8.3"
codecov = "^2.1.12"
pytest = "^7.0.1"
isort = "^5.10.1"
poethepoet = "^0.16.0"
po2json = "^0.2.2"
bandit = "<=1.7.2"

[tool.poetry.group.speedups]
optional = true

[tool.poetry.group.speedups.dependencies]
html5lib = "^1.1"
lxml = "^4.9.1"
Js2Py = "^0.71"
pymediainfo = "^5.0.3"

[tool.poetry.group.types]
optional = true

[tool.poetry.group.types.dependencies]
types-attrs = "^19.1.0"
types-pyOpenSSL = "^22.0.10"
types-python-dateutil = "^2.8.19"
types-python-slugify = "^6.1.0"
types-requests = "^2.28.11"
types-chardet = "^5.0.4"
types-pytz = "^2022.2.1.0"
types-setuptools = "^65.3.0"
types-six = "^1.16.20"

[tool.poetry.group.experimental]
optional = true

[tool.poetry.group.experimental.dependencies]
pyaes = "^1.6.1"

[tool.poetry.extras]
experimental = ["experimental"]
speedups = ["html5lib", "lxml", "Js2Py"]
types = ["types"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [
    ".eggs",
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
]
inline-quotes = "double"
docstring-convention = "numpy"
ignore = [
    "C812",
    "D4",
    "D400",
    "D401",
    "D403",
    "D406",
    "D407",
    "D200",
    "D202",
    "D205",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D106",
    "S101",
    "PT009",
    "PT017"
]

max_line_length = 160
show_source = "True"
builtins = ["_"]
#select = 'C103'

[tool.pytest.ini_options]
testpaths = ["tests", "sickchill", "SickChill.py"]
addopts = "--cov=sickchill --cov-report xml --no-cov-on-fail"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 160
combine_as_imports = true
order_by_type = false
remove_imports = [ "from __future__ import absolute_import", "from __future__ import print_function", "from __future__ import unicode_literals" ]
known_first_party = "sickchill"
extra_standard_library = [ "posixpath", "ntpath" ]
use_parentheses = true
src_paths = [ "sickchill", "tests", "SickChill.py", "setup.py" ]

[tool.black]
line-length = 160
target_version = ['py310']
include = '\.pyi?$'

[tool.poe.tasks]
pytest = "pytest"
yarn = "yarn"
xo = "xo"
ava = "ava"

_black = {cmd = "black . --check --diff", help = "Check code style using black"}
_isort = {cmd = "isort . --check-only --diff", help = "Check import order"}
flake8 = {cmd = "flake8 --select C103 sickchill tests SickChill.py", help = "Check for undefined variables"}

isort = {cmd = "isort .", help = "Fix import order"}
black = {cmd = "black .", help = "Reformat code using black"}

test_providers = {cmd = "pytest tests/sickchill_tests/providers/torrent/test_parsing.py", help = "Run provider tests"}
crowdin_upload = "crowdin-cli-py upload sources -c .github/crowdin.yml"
crowdin_download = "crowdin-cli-py download -c .github/crowdin.yml"
po2json = "po2json --format jed "
codecov = "codecov"

lint = ["_black", "_isort", "flake8"]
format = ["black", "isort", "flake8"]

_poetry_update = {shell = "poetry update", help = "update python dependancies"}
_yarn_upgrade = {cmd = "yarn upgrade", help = "update yarn dependancies"}
_add_locks = {shell = "git add pyproject.toml yarn.lock", help = "Add yarn and poetry lock files"}
depup = ["_poetry_update", "_yarn_upgrade", "_add_locks"]

update_translations = ["babel_extract", "babel_update", "crowdin_upload", "crowdin_download", "babel_compile", "po2json"]
update_dependencies = {shell = "poetry update && yarn upgrade && git add pyproject.toml yarn.lock"}

test = [
    { ref = "lint" },
    { cmd = "yarn test" },
    { cmd = "pytest" }
]

babel_extract = """
pybabel extract
--project=sickchill
--mapping-file=.github/babel-mapping.cfg
--width=80
--charset=utf-8
--output-file=sickchill/locale/messages.pot
--input-dirs=sickchill
--keywords=_n:1,2
--copyright-holder=SickChill
--msgid-bugs-address=miigotu@gmail.com
--add-comments="TRANSLATORS:"
--sort-output
"""

babel_compile = """
pybabel compile
--mapping-file=.github/babel-mapping.cfg
--directory=sickchill/locale
"""

babel_init = """
pybabel init
--mapping_file=.github/babel-mapping.cfg
--output-dir=sickchill/locale
--input-file=sickchill/locale/messages.pot
"""

babel_update = """
pybabel update
--output-dir=sickchill/locale
--input-file=sickchill/locale/messages.pot
--ignore-obsolete
--previous
"""

[tool.poetry.dependencies]
python = ">=3.7.2,<4"
"bencode.py" = "^4.0.0"
CacheControl = "^0.12.6"
configobj = "^5.0.6"
greenlet = {version = ">=1.1.2", allow-prereleases = true}
ipaddress = "^1.0.23"
jsonrpclib-pelix = "^0.4.2"
Mako = "^1.1.4"
markdown2 = "^2.4.0"
PyGithub = "^1.54.1"
pyOpenSSL = ">=20.0.1,<23.0.0"
python-dateutil = "^2.8.1"
python-twitter = "^3.5"
rarfile = "^4.0"
subliminal = "^2.1.0"
tmdbsimple = "^2.8.0"
tornado = "^6.1"
tvdbsimple = "^1.0.6"
Unidecode = "^1.2.0"
validators = ">=0.18.2,<0.21.0"
enzyme = "^0.4.1"
python3-fanart = "^2.0.0"
gntp = "^1.0.3"
"tus.py" = "^1.3.4"
win-inet-pton = "^1.1.0"
PyNMA = "^1.0"
"putio.py" = "^8.7.0"
profilehooks = "^1.12.0"
imagesize = "^1.2.0"
Send2Trash = {version = "^1.5.0", optional = true}
deluge-client = "^1.9.0"
ifaddr = ">=0.1.7,<0.3.0"
new-rtorrent-python = "^1.0.1-alpha.0"
qbittorrent-api = ">=2021.3.18,<2023.0.0"
packaging = ">=20.9,<22.0"
timeago = "^1.0.15"
SQLAlchemy = "^1.4.3"
python-slugify = ">=4.0.1,<7.0.0"
guessit = "^3.3.1"
requests = "^2.25.1"
IMDbPY = ">=2020.09.25"
babelfish = ">=0.6.0b1"
kodipydent-alt = ">=2022.9.3"
beekeeper-alt = ">=2022.9.3"

# stevedore dropped support for python 3.7
stevedore = {version = "<=3.5.0", python = "<3.8"}
importlib-metadata = {version = "<5.0.0", python = "<3.8"}

# Cryptography wheels for 35+ require rust, and the build does not work on github.
cryptography = [
  {version = "<35.0.0", markers = "platform_machine != 'amd64' and platform_machine != 'arm64' and platform_machine != 'aarch64' and platform_machine != 'x86_64'"}
]
