[metadata]
name = sickchill
version = 0.0.11
description = Automatic Video Library Manager for TV Shows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://sickchill.github.io
download_url = https://github.com/SickChill/SickChill
author = Dustyn Gibson
author_email = miigotu@gmail.com
license = file: LICENSE.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Topic :: Multimedia :: Video
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
setup_requires=
    babel
    wheel
tests_require =
    coveralls
    nose
    rednose
    mock
    vcrpy-unittest
    flake8-coding
    isort

python_requires = >=3.6.1

scripts =
    SickChill.py

[nosetests]
detailed-errors=1
rednose=1
verbosity=3
where=tests
with-coverage=1
cover-erase=1
cover-package=sickchill
nocapture=1
nologcapture=1

[flake8]
no-accept-encodings = True

[isort]
line_length = 160
combine_as_imports = true
order_by_type = false
remove_imports = from __future__ import absolute_import, from __future__ import print_function, from __future__ import unicode_literals
known_first_party = sickchill
extra_standard_library = posixpath, ntpath
use_parentheses = True
#import_heading_thirdparty = Third Party Imports
#import_heading_firstparty = First Party Imports
#import_heading_localfolder = Local Folder Imports
#import_heading_stdlib = Stdlib Imports

[extract_messages]
width = 80
charset = utf-8
output-file = sickchill/locale/messages.pot
# keywords to look for in addition to the defaults.
keywords = _n:1,2
copyright-holder = SickChill
msgid-bugs-address = miigotu@gmail.com
# place comment block with TAG (or those preceding keyword lines) in output file. Separate multiple TAGs with commas(,)
add-comments = TRANSLATORS:

[compile_catalog]
directory = sickchill/locale

[init_catalog]
output-dir = sickchill/locale
input-file = sickchill/locale/messages.pot

[update_catalog]
output-dir = sickchill/locale
input-file = sickchill/locale/messages.pot
ignore-obsolete = true
previous = true

