[metadata]
name = sickchill
description = Automatic Video Library Manager for TV Shows
long_description = file: README.md
long_description_content_type = text/markdown

[options]
setup_requires=
    babel
    wheel
    setuptools_scm
    nose
    rednose

tests_require =
    coveralls
    nose
    rednose
    mock
    vcrpy-unittest
    flake8-coding
    isort

python_requires = >=3.6.1
scripts =
    SickChill.py

[extract_messages]
width = 80
charset = utf-8
output-file = sickchill/locale/messages.pot
# keywords to look for in addition to the defaults.
keywords = _n:1,2
copyright-holder = SickChill
msgid-bugs-address = miigotu@gmail.com
# place comment block with TAG (or those preceding keyword lines) in output file. Separate multiple TAGs with commas(,)
add-comments = TRANSLATORS:

[compile_catalog]
directory = sickchill/locale

[init_catalog]
output-dir = sickchill/locale
input-file = sickchill/locale/messages.pot

[update_catalog]
output-dir = sickchill/locale
input-file = sickchill/locale/messages.pot
ignore-obsolete = true
previous = true

